--- a/Client/Dt.MgrDemo/一对多/父子/父表Query.xaml
+++ b/Client/Dt.MgrDemo/一对多/父子/父表Query.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Tab
-    x:Class="Dt.MgrDemo.多对多.权限Query"
+    x:Class="Dt.MgrDemo.一对多.父表Query"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -7,7 +7,7 @@
 
     <Grid RowDefinitions="*,Auto">
         <a:QueryFv x:Name="_fv">
-            <a:CText ID="权限名称" Query="Editable" />
+            <a:CText ID="父名" Query="Editable" />
             <CheckBox Content="筛选条件之间【与】关系" IsChecked="{Binding IsAnd,ElementName=_fv,Mode=TwoWay}" />
         </a:QueryFv>
         <Grid ColumnDefinitions="*,*" Margin="20" Grid.Row="1">
