--- a/Client/Dt.MgrDemo/多对多/角色/角色Query.xaml
+++ b/Client/Dt.MgrDemo/多对多/角色/角色Query.xaml
@@ -5,16 +5,15 @@
     xmlns:a="using:Dt.Base"
     Title="查询">
 
-    <a:QueryFv x:Name="_fv">
-        <a:CText ID="角色名称" Query="Editable" />
-        <a:CText ID="角色描述" Query="Editable" />
-        <CheckBox Content="筛选条件之间【与】关系" IsChecked="{Binding IsAnd,ElementName=_fv,Mode=TwoWay}" />
-        <a:CBar />
-        <a:CBar>
-            <Grid ColumnDefinitions="*,*">
-                <Button Content="重置" Command="{Binding CmdReset,ElementName=_fv}" HorizontalAlignment="Stretch" />
-                <Button Content="查询" Command="{Binding CmdQuery,ElementName=_fv}" HorizontalAlignment="Stretch" Grid.Column="1" />
-            </Grid>
-        </a:CBar>
-    </a:QueryFv>
+    <Grid RowDefinitions="*,Auto">
+        <a:QueryFv x:Name="_fv">
+            <a:CText ID="角色名称" Query="Editable" />
+            <a:CText ID="角色描述" Query="Editable" />
+            <CheckBox Content="筛选条件之间【与】关系" IsChecked="{Binding IsAnd,ElementName=_fv,Mode=TwoWay}" />
+        </a:QueryFv>
+        <Grid ColumnDefinitions="*,*" Margin="20" Grid.Row="1">
+            <Button Content="重置" Command="{Binding CmdReset,ElementName=_fv}" Style="{StaticResource 浅色按钮}" Background="{StaticResource 深灰2}" HorizontalAlignment="Stretch" />
+            <Button Content="查询" Command="{Binding CmdQuery,ElementName=_fv}" Style="{StaticResource 浅色按钮}" Background="{StaticResource 亮红}" HorizontalAlignment="Stretch" Grid.Column="1" />
+        </Grid>
+    </Grid>
 </a:Tab>
