--- a/Client/Dt.MgrDemo/多对多/角色/角色List.xaml
+++ b/Client/Dt.MgrDemo/多对多/角色/角色List.xaml
@@ -17,32 +17,17 @@
                 <a:Dot ID="角色描述" />
             </StackPanel>
         </DataTemplate>
-
-        <DataTemplate x:Key="TileView">
-            <StackPanel Padding="10">
-                <a:Dot ID="角色名称" />
-                <a:Dot ID="角色描述" />
-            </StackPanel>
-        </DataTemplate>
     </a:Tab.Resources>
 
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
-            <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" Visibility="Collapsed" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
-            <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
-            <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
-            <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
-            <a:Mi ID="视图" Icon="汉堡">
-                <a:Mi ID="列表" IsCheckable="True" Checked="OnListSelected" GroupName="View" />
-                <a:Mi ID="表格" IsCheckable="True" Checked="OnTableSelected" IsChecked="True" GroupName="View" />
-                <a:Mi ID="平铺" IsCheckable="True" Checked="OnTileSelected" GroupName="View" />
-            </a:Mi>
+            <a:Mi x:Name="_mi" ID="列表" Icon="列表" ShowInPhone="Icon" Click="OnToggleView" />
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" View="{StaticResource TableView}" ViewMode="Table" ItemClick="OnItemClick">
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
