--- a/Client/Dt.Mgr/Rbac/Group/GroupRoleList.xaml
+++ b/Client/Dt.Mgr/Rbac/Group/GroupRoleList.xaml
@@ -1,9 +1,9 @@
 ﻿<a:Tab
-    x:Class="Dt.Mgr.Rbac.UserGroupList"
+    x:Class="Dt.Mgr.Rbac.GroupRoleList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="关联分组">
+    Title="关联角色">
     
     <a:Tab.Menu>
         <a:Menu>
