--- a/Client/Dt.Mgr/Rbac/Group/GroupRoleList.xaml
+++ b/Client/Dt.Mgr/Rbac/Group/GroupRoleList.xaml
@@ -8,7 +8,7 @@
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="添加" Icon="加号" ShowInPhone="Icon" IsEnabled="false" Click="OnAdd" />
-            <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" Visibility="Collapsed" IsEnabled="{Binding HasSelected}" />
+            <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" Visibility="Collapsed" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
             <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
             <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
             <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
