--- a/Client/Dt.Mgr/Rbac/Role/User4RoleDlg.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/User4RoleDlg.xaml
@@ -1,26 +1,17 @@
-﻿<a:Tab
-    x:Class="Dt.Mgr.Rbac.GroupUserList"
+﻿<a:Dlg
+    x:Class="Dt.Mgr.Rbac.User4RoleDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="关联用户">
-    
-    <a:Tab.Menu>
-        <a:Menu>
-            <a:Mi ID="添加" Icon="加号" ShowInPhone="Icon" IsEnabled="false" Click="OnAdd" />
-            <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" Visibility="Collapsed" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
-            <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
-            <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
-            <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
-        </a:Menu>
-    </a:Tab.Menu>
+    Title="选择用户">
 
-    <a:Lv x:Name="_lv">
-        <a:Ex.Menu>
-            <a:Menu>
-                <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
-            </a:Menu>
-        </a:Ex.Menu>
+    <a:Dlg.Menu>
+        <a:Menu>
+            <a:Mi ID="确定" Icon="保存" Click="OnOK" />
+        </a:Menu>
+    </a:Dlg.Menu>
+
+    <a:Lv x:Name="_lv" SelectionMode="Multiple">
         <DataTemplate>
             <StackPanel Padding="6">
                 <StackPanel Orientation="Horizontal">
@@ -34,4 +25,4 @@
             </StackPanel>
         </DataTemplate>
     </a:Lv>
-</a:Tab>
+</a:Dlg>
