--- a/Client/Dt.Mgr/Module/Publish/Manager/ResLib/ResLibWin.xaml
+++ b/Client/Dt.Mgr/Module/Publish/Manager/ResLib/ResLibWin.xaml
@@ -3,11 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    AutoSaveLayout="False">
+    AutoSaveLayout="False"
+    xmlns:l="using:Dt.Mgr.Module">
 
     <a:Pane InitWidth="600">
         <a:Tabs>
-            <a:Tab x:Name="_tab" Title="素材库" />
+            <l:FolderPage x:Name="_tab" Title="素材库" />
         </a:Tabs>
     </a:Pane>
 </a:Win>
