--- a/Client/Dt.MgrDemo/单实体/基础/实体Win.xaml
+++ b/Client/Dt.MgrDemo/单实体/基础/实体Win.xaml
@@ -9,7 +9,7 @@
         <a:FuzzySearch x:Name="_search" Search="OnSearch">
             <x:String>全部</x:String>
         </a:FuzzySearch>
-        <l:实体Query x:Name="_query" Query="OnQuery" Icon="漏斗" />
+        <l:实体Query x:Name="_query" Query="OnQuery" />
     </a:Tabs>
     <l:实体List x:Name="_list" Order="1" />
     <l:实体Form x:Name="_form" a:Ex.Dock="Right" />
