--- a/Client/Dt.MgrDemo/多对多/角色/角色权限List.xaml
+++ b/Client/Dt.MgrDemo/多对多/角色/角色权限List.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="权限列表">
+    Title="关联权限">
 
     <a:Tab.Resources>
         <a:Cols x:Key="TableView">
