Dt.Client4.0.1 VS扩展4.0.1

--- a/Client/Dt.Mgr/Root/Menu/RootMenu.xaml
+++ b/Client/Dt.Mgr/Root/Menu/RootMenu.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="开始">
+    Title="所有"
+    Icon="主页">
 
     <a:Tab.Menu>
         <a:Menu>
