--- a/Tools/DtTemplates/PrjTemplate/Client/Stub/Home/HomeWin.xaml
+++ b/Tools/DtTemplates/PrjTemplate/Client/Stub/Home/HomeWin.xaml
@@ -1,12 +1,13 @@
 ﻿<a:Win
-    x:Class="Dt.Mgr.DefaultHome"
+    x:Class="$ext_safeprojectname$.HomeWin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     xmlns:home="using:Dt.Mgr.Home"
+    xmlns:l="using:$ext_safeprojectname$"
     AutoSaveLayout="False">
 
-    <home:RootMenu x:Name="_menu" Order="1" a:Ex.Dock="Left" />
-    <a:Tab Order="2" Title="动态" Icon="心电" />
-    <home:MyMain x:Name="_my" Order="3" a:Ex.Dock="Right" />
+    <home:RootMenu x:Name="_menu" Order="2" a:Ex.Dock="Left" />
+    <l:HomeMain Order="1" />
+    <home:MyMain Order="3" a:Ex.Dock="Right" />
 </a:Win>
