--- a/Client/Dt.Mgr/Rbac/Menu/MenuList.xaml
+++ b/Client/Dt.Mgr/Rbac/Menu/MenuList.xaml
@@ -5,6 +5,12 @@
     xmlns:a="using:Dt.Base"
     Title="菜单树">
 
+    <a:Tab.Menu>
+        <a:Menu>
+            <a:Mi ID="更新模型" Icon="刷新" Click="OnRefresh" />
+        </a:Menu>
+    </a:Tab.Menu>
+    
     <a:TreeView x:Name="_tv" ItemClick="OnItemClick">
         <a:Ex.Menu>
             <a:Menu>
