excel打印功能升级WinUI后报错 https://github.com/Daoting/dt/issues/96

--- a/Client/Dt.UIDemo/Excels/ChartPicture.xaml
+++ b/Client/Dt.UIDemo/Excels/ChartPicture.xaml
@@ -43,6 +43,7 @@
                         </ComboBox>
                     </a:CFree>
                     <Button Content="保存" Click="SaveExcelFile" />
+                    <Button Content="打印" Click="OnPrintExcel" />
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
