--- a/Client/Dt.UIDemo/FormView/BaseCellDemo.xaml
+++ b/Client/Dt.UIDemo/FormView/BaseCellDemo.xaml
@@ -48,7 +48,7 @@
                     
                     <a:CBar Title="链接格" />
                     <a:CLink Title="默认链接格" />
-                    <a:CLink RowSpan="2" IsHorStretch="False">
+                    <a:CLink RowSpan="2" ColSpan="1">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="ms-appx:///Assets/logo.png" Width="50" Height="50" Margin="0,0,20,0" Stretch="Uniform" />
                             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -57,7 +57,7 @@
                             </StackPanel>
                         </StackPanel>
                     </a:CLink>
-                    <a:CLink x:Name="_link" Title="切换内容" IsHorStretch="False" Click="OnToggleLink" />
+                    <a:CLink x:Name="_link" Title="切换内容" ColSpan="1" Click="OnToggleLink" />
 
                     <a:CBar Title="提示信息格" />
                     <a:CTip ID="tip" Title="普通只读信息" />
