MgrDemo的 *.Designer.cs 改 *.tbl.cs

--- a/Client/Dt.MgrDemo/一对多/父子/父表大儿Form.xaml
+++ b/Client/Dt.MgrDemo/一对多/父子/父表大儿Form.xaml
@@ -14,7 +14,7 @@
     </a:Tab.Menu>
 
     <a:Fv x:Name="_fv">
-        <a:CNum ID="ParentID" />
+        <a:CNum ID="parent_id" />
         <a:CText ID="大儿名" />
     </a:Fv>
 </a:Tab>
