--- a/Client/Dt.MgrDemo/Workflow/收文List.xaml
+++ b/Client/Dt.MgrDemo/Workflow/收文List.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.MgrDemo.收文List"
+    x:Class="Dt.MgrDemo.Workflow.收文List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
