--- a/Client/Dt.Base/Structure/Tools/SysTrace.xaml
+++ b/Client/Dt.Base/Structure/Tools/SysTrace.xaml
@@ -13,6 +13,7 @@
             <a:Mi ID="库路径" Icon="文件夹" Click="OnLocalPath" />
             <a:Mi ID="安装路径" Icon="文件夹" Click="OnInstallPath" />
             <a:Mi ID="操作系统" Icon="服务器" Click="OnHostOS" />
+            <a:Mi ID="关于" Icon="搬运工" Click="OnAbout" />
         </a:Menu>
     </a:Dlg.Menu>
 
