--- a/Client/Dt.Mgr/Rbac/Menu/MenuList.xaml
+++ b/Client/Dt.Mgr/Rbac/Menu/MenuList.xaml
@@ -7,7 +7,7 @@
 
     <a:Tab.Menu>
         <a:Menu>
-            <a:Mi ID="更新模型" Icon="刷新" Click="OnRefresh" />
+            <a:Mi ID="更新缓存" Icon="刷新" Click="OnRefresh" />
         </a:Menu>
     </a:Tab.Menu>
     
