--- a/Client/Dt.Base/Structure/Tools/LocalDbWin.xaml
+++ b/Client/Dt.Base/Structure/Tools/LocalDbWin.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.Base.Tools.LocalDbView"
+    x:Class="Dt.Base.Tools.LocalDbWin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -47,20 +47,4 @@
             </a:Tab>
         </a:Tabs>
     </a:Main>
-    <a:Pane Pos="Right">
-        <a:Tabs>
-            <a:Tab Order="2" Title="服务端sqlite文件">
-                <a:Lv x:Name="_lvFile" >
-                    <a:Ex.Menu>
-                        <a:Menu>
-                            <a:Mi ID="更新" Icon="刷新" Click="OnRefreshFile" />
-                        </a:Menu>
-                    </a:Ex.Menu>
-                    <DataTemplate>
-                        <a:Dot Margin="10,0,10,0" />
-                    </DataTemplate>
-                </a:Lv>
-            </a:Tab>
-        </a:Tabs>
-    </a:Pane>
 </a:Win>
