--- a/Client/Dt.Base/Structure/Tools/HistoryLogWin.xaml
+++ b/Client/Dt.Base/Structure/Tools/HistoryLogWin.xaml
@@ -3,7 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
+    xmlns:tools="using:Dt.Base.Tools"
     Title="历史日志">
 
-    
+    <tools:HistoryLogQuery x:Name="_query" a:Ex.Dock="Left" />
+    <tools:HistoryLogList x:Name="_list" />
+    <tools:TraceLogForm x:Name="_fm" a:Ex.Dock="Right" />
 </a:Win>
