--- a/Client/Dt.Base/Structure/Tools/RealtimeLogWin.xaml
+++ b/Client/Dt.Base/Structure/Tools/RealtimeLogWin.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
+    xmlns:tools="using:Dt.Base.Tools"
     AutoSaveLayout="False"
     Title="实时日志">
 
@@ -21,7 +22,7 @@
                         <StackPanel Padding="10,0,10,10">
                             <StackPanel Height="40" Orientation="Horizontal">
                                 <a:Dot ID="Time" Foreground="{StaticResource 深灰1}" />
-                                <a:Dot ID="Title" Call="LogCellUI.TitleBrush" Margin="10, 6, 0, 6" Padding="10,0,10,0" />
+                                <a:Dot ID="LevelAndSource" Call="LogCellUI.TitleBrush" Margin="10, 6, 0, 6" Padding="10,0,10,0" />
                             </StackPanel>
                             <a:Dot ID="Message" />
                         </StackPanel>
@@ -32,9 +33,7 @@
     </a:Pane>
     <a:Pane>
         <a:Tabs>
-            <a:Tab Title="日志内容">
-                <TextBlock Text="asdfa" />
-            </a:Tab>
+            <tools:TraceLogForm x:Name="_fm" />
         </a:Tabs>
     </a:Pane>
 </a:Win>
