--- a/Client/Dt.Base/Structure/Tools/TraceLogForm.xaml
+++ b/Client/Dt.Base/Structure/Tools/TraceLogForm.xaml
@@ -12,13 +12,11 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <a:Fv x:Name="_fv">
-            <a:CTip ID="Time" Title="时间" />
-            <a:CTip ID="Level" Title="级别" />
+            <a:CTip ID="TimeLevel" Title="时间" />
             <a:CTip ID="Source" Title="来源" ColSpan="0.9" />
             <a:CFree ColSpan="0.1" ShowTitle="False">
-                <Button Content="&#xE007;" Style="{StaticResource 字符按钮}" Click="CopySource" />
+                <Button Content="&#xE007;" Style="{StaticResource 字符按钮}" Click="CopySource" HorizontalAlignment="Stretch" />
             </a:CFree>
-            <a:CTip ID="Title" Title="简述" />
         </a:Fv>
         <Grid Background="{StaticResource 浅灰1}" BorderBrush="{StaticResource 浅灰2}" BorderThickness="1" Margin="0,0,-1,0" Grid.Row="1">
             <TextBlock Text="内容" VerticalAlignment="Center" Margin="10,0,10,0" />
