--- a/Client/Dt.Base/Structure/Tools/HistoryLogList.xaml
+++ b/Client/Dt.Base/Structure/Tools/HistoryLogList.xaml
@@ -8,11 +8,13 @@
     <a:Lv x:Name="_lv" ItemClick="OnOutputClick" ItemHeight="NaN">
         <DataTemplate>
             <StackPanel Padding="10,0,10,10">
-                <StackPanel Height="40" Orientation="Horizontal">
-                    <a:Dot ID="Timestamp" Call="Def.AutoDate" Foreground="{StaticResource 深灰1}" />
-                    <a:Dot ID="Level" Margin="10, 6, 0, 6" Padding="10,0,10,0" />
+                <StackPanel Padding="10,0,10,10">
+                    <StackPanel Height="40" Orientation="Horizontal">
+                        <a:Dot ID="Time" Foreground="{StaticResource 深灰1}" />
+                        <a:Dot ID="LevelAndSource" Call="HisLogCellUI.TitleBrush" Margin="10, 6, 0, 6" Padding="10,0,10,0" />
+                    </StackPanel>
+                    <a:Dot ID="Message" />
                 </StackPanel>
-                <a:Dot ID="RenderedMessage" />
             </StackPanel>
         </DataTemplate>
     </a:Lv>
