--- a/Client/Dt.Base/Structure/Tools/ToggleSvcUrlDlg.xaml
+++ b/Client/Dt.Base/Structure/Tools/ToggleSvcUrlDlg.xaml
@@ -2,26 +2,11 @@
     x:Class="Dt.Base.Tools.ToggleSvcUrlDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
-
-    <a:Dlg.Menu>
-        <a:Menu>
-            <a:Mi ID="切换服务" Icon="服务器" />
-        </a:Menu>
-    </a:Dlg.Menu>
+    xmlns:a="using:Dt.Base"
+    Title="切换服务">
 
     <a:Fv x:Name="_fv">
-        <a:CList ID="url" Title="服务Url" IsEditable="true">
-            <a:CList.Items>
-                <x:String>选项一</x:String>
-                <x:String>选项二</x:String>
-                <x:String>选项三</x:String>
-                <x:String>选项四</x:String>
-                <x:String>选项五</x:String>
-                <x:String>选项六</x:String>
-            </a:CList.Items>
-        </a:CList>
-        <a:CBar Title="以后始终使用该服务" />
-        <a:CBool ID="always" Title="以后始终使用该服务" ShowTitle="false" />
+        <a:CList ID="url" Title="服务地址" IsEditable="true" />
+        <Button Content="重新启动" Click="OnRestart" HorizontalAlignment="Stretch" />
     </a:Fv>
 </a:Dlg>
