--- a/Client/Dt.UIDemo/ListView/LvTable.xaml
+++ b/Client/Dt.UIDemo/ListView/LvTable.xaml
@@ -8,8 +8,8 @@
         <a:Cols x:Key="View1">
             <a:Col ID="xm" Title="姓名" Width="120" />
             <a:Col ID="bh" Title="编号" Width="80" />
-            <a:Col ID="chushengrq" Title="出生日期" Width="120" />
-            <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
+            <a:Col ID="chushengrq" Title="出生&#10;日期" Width="120" />
+            <a:Col ID="shenfenzh" Title="身份&#10;证号&#10;码" Width="200" />
             <a:Col ID="xb" Title="性别" Width="60" FontSize="12" />
             <a:Col ID="hunfou" Title="婚否" Width="60" />
             <a:Col ID="shengao" Title="身高" Width="60" FontStyle="Italic" FontWeight="Bold" />
