--- a/Client/Dt.Base/Structure/Tools/HistoryLogQuery.xaml
+++ b/Client/Dt.Base/Structure/Tools/HistoryLogQuery.xaml
@@ -5,16 +5,15 @@
     xmlns:a="using:Dt.Base"
     Title="查询"
     Icon="漏斗">
-
+    
     <a:QueryFv x:Name="_fv">
-        <a:CBar Title="时间范围" />
-        <StackPanel Orientation="Horizontal">
-            <Button Content="近三天" Click="OnDaysClick" />
-            <Button Content="本月" Click="OnMonthClick"/>
-            <Button Content="本季度" Click="OnQuarterClick"/>
-        </StackPanel>
-        <a:CDate ID="start" Title="起始时间" />
-        <a:CDate ID="end" Title="终止时间" />
+        <a:CBool ID="eninclude" Title="包含，文字之间用 &amp; 和 | 表示与或关系" ShowTitle="False" />
+        <a:CText ID="include" ShowTitle="False" />
+        <a:CBool ID="enexclude" Title="排除，文字之间用 &amp; 和 | 表示与或关系" ShowTitle="False" />
+        <a:CText ID="exclude" ShowTitle="False" />
+        <a:CBool ID="enline" Title="行号范围" ShowTitle="False" />
+        <a:CNum ID="startno" IsInteger="True" Title="始" TitleWidth="40" ColSpan="0.5" />
+        <a:CNum ID="endno" IsInteger="True" Title="终" TitleWidth="40" ColSpan="0.5" />
         <a:CList ID="level" Title="级别">
             <a:CList.Items>
                 <x:String>全部</x:String>
@@ -25,6 +24,5 @@
                 <x:String>Fatal</x:String>
             </a:CList.Items>
         </a:CList>
-        <a:CText ID="content" Title="内容" Query="Editable" QueryFlag="Contains" />
     </a:QueryFv>
 </a:Tab>
